# niri-mac

./: Cargo.toml  README.md
docs/wiki/: Getting-Started.md
niri-config/: Cargo.toml
src/: main.rs  niri.rs
src/backend/: mod.rs
src/input/: mod.rs
src/utils/: mod.rs  signals.rs
