[workspace]
members = [
    "niri-config",
    "niri-ipc",
    "niri-visual-tests",
]

[workspace.package]
version = "25.11.0"
description = "A scrollable-tiling Wayland compositor"
authors = ["Ivan Molodetskikh <yalterz@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2021"
repository = "https://github.com/YaLTeR/niri"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0.100"
bitflags = "2.10.0"
clap = { version = "4.5.54", features = ["derive"] }
insta = "1.46.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = { version = "0.1.44", features = ["max_level_trace", "release_max_level_debug"] }
# 0.3.20 filters out all ANSI codes to "fix a security issue" while also breaking
# everyone who relied on them for color output, with no fallback available.
# https://github.com/tokio-rs/tracing/issues/3378
tracing-subscriber = { version = "=0.3.19", features = ["env-filter"] }
tracy-client = { version = "0.18.4", default-features = false }

[workspace.dependencies.smithay]
# version = "0.4.1"
git = "https://github.com/Smithay/smithay.git"
# path = "../smithay"
default-features = false

[workspace.dependencies.smithay-drm-extras]
# version = "0.1.0"
git = "https://github.com/Smithay/smithay.git"
# path = "../smithay/smithay-drm-extras"

[package]
name = "niri"
version.workspace = true
description.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true

readme = "README.md"
keywords = ["wayland", "compositor", "tiling", "smithay", "wm"]

# Cross-platform dependencies
[dependencies]
anyhow.workspace = true
arrayvec = "0.7.6"
async-channel = "2.5.0"
async-io = { version = "2.6.0", optional = true }
atomic = "0.6.1"
bitflags.workspace = true
bytemuck = { version = "1.24.0", features = ["derive"] }
calloop = { version = "0.14.3", features = ["executor", "futures-io"] }
clap = { workspace = true, features = ["string"] }
clap_complete = "4.5.65"
clap_complete_nushell = "4.5.10"
directories = "6.0.0"
fastrand = "2.3.0"
futures-util = { version = "0.3.31", default-features = false, features = ["std", "io"] }
git-version = "0.3.9"
glam = "0.30.10"
keyframe = { version = "1.1.1", default-features = false }
libc = "0.2.180"
log = { version = "0.4.29", features = ["max_level_trace", "release_max_level_debug"] }
niri-config = { version = "25.11.0", path = "niri-config" }
niri-ipc = { version = "25.11.0", path = "niri-ipc", features = ["clap"] }
ordered-float = "5.1.0"
pango = { version = "0.21.5", features = ["v1_44"] }
pangocairo = "0.21.5"
png = "0.18.0"
profiling = "1.0.17"
serde.workspace = true
serde_json.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
tracy-client.workspace = true
xcursor = "0.3.10"

# Linux-only dependencies
[target.'cfg(target_os = "linux")'.dependencies]
accesskit = { version = "0.22.0", optional = true }
accesskit_unix = { version = "0.18.0", optional = true }
calloop = { version = "0.14.3", features = ["executor", "futures-io", "signals"] }
drm-ffi = "0.9.0"
input = { version = "0.9.1", features = ["libinput_1_21"] }
libdisplay-info = "0.3.0"
pipewire = { version = "0.9.2", optional = true, features = ["v0_3_33"] }
sd-notify = "0.4.5"
smithay-drm-extras.workspace = true
wayland-backend = "0.3.12"
wayland-scanner = "0.31.8"
zbus = { version = "5.13.0", optional = true }

# macOS-only dependencies
[target.'cfg(target_os = "macos")'.dependencies]
# Core graphics and window management for macOS
# cocoa = "0.26"
# core-foundation = "0.10"
# core-graphics = "0.24"
# objc2 = "0.5"

# Smithay - features are platform-dependent
# On Linux: full compositor support with DRM, libinput, etc.
# On macOS: only Winit backend available (windowed mode)
[dependencies.smithay]
workspace = true
# Base features for all platforms
features = [
    "backend_winit",
    "desktop",
    "renderer_gl",
    "renderer_pixman",
    "use_system_lib",
]

# Linux-specific Smithay features - these require Linux libraries
# On Linux builds, enable all compositor features
[target.'cfg(target_os = "linux")'.dependencies.smithay]
workspace = true
features = [
    "backend_drm",
    "backend_egl",
    "backend_gbm",
    "backend_libinput",
    "backend_session_libseat",
    "backend_udev",
    "renderer_multi",
    "wayland_frontend",
]

[dev-dependencies]
approx = "0.5.1"
calloop-wayland-source = "0.4.1"
insta.workspace = true
proptest = "1.9.0"
proptest-derive = { version = "0.7.0", features = ["boxed_union"] }
rayon = "1.11.0"
wayland-client = "0.31.12"
xshell = "0.2.7"

[build-dependencies]
pkg-config = "0.3.32"

[features]
# Default features vary by platform - on non-Linux, dbus/systemd features won't work
default = ["dbus", "systemd", "xdp-gnome-screencast"]

# Enables D-Bus support (serve various freedesktop and GNOME interfaces, accessibility tree, power button handling).
# NOTE: This feature only works on Linux as it depends on zbus and accesskit_unix
dbus = ["dep:zbus", "dep:async-io", "dep:accesskit", "dep:accesskit_unix"]

# Enables systemd integration (global environment, apps in transient scopes).
# NOTE: This feature only works on Linux
systemd = ["dbus"]

# Enables screencasting support through xdg-desktop-portal-gnome.
# NOTE: This feature only works on Linux as it depends on pipewire
xdp-gnome-screencast = ["dbus", "pipewire"]

# Enables the Tracy profiler instrumentation.
profile-with-tracy = ["profiling/profile-with-tracy", "tracy-client/default", "smithay/tracy_gpu_profiling"]
# Enables the on-demand Tracy profiler instrumentation.
profile-with-tracy-ondemand = ["profile-with-tracy", "tracy-client/ondemand", "tracy-client/manual-lifetime"]
# Enables Tracy allocation profiling.
profile-with-tracy-allocations = ["profile-with-tracy"]

# Enables dinit integration (global environment).
# NOTE: This feature only works on Linux
dinit = []

# macOS-specific feature (placeholder for future macOS backend)
macos-backend = []

[lints.clippy]
new_without_default = "allow"

[profile.release]
debug = "line-tables-only"
overflow-checks = true
lto = "thin"

[profile.release.package.niri-config]
# knuffel with chomsky generates a metric ton of debuginfo.
debug = false

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[package.metadata.generate-rpm]
version = "25.11"
assets = [
    { source = "target/release/niri", dest = "/usr/bin/", mode = "755" },
    { source = "resources/niri-session", dest = "/usr/bin/", mode = "755" },
    { source = "resources/niri.desktop", dest = "/usr/share/wayland-sessions/", mode = "644" },
    { source = "resources/niri-portals.conf", dest = "/usr/share/xdg-desktop-portal/", mode = "644" },
    { source = "resources/niri.service", dest = "/usr/lib/systemd/user/", mode = "644" },
    { source = "resources/niri-shutdown.target", dest = "/usr/lib/systemd/user/", mode = "644" },
]
[package.metadata.generate-rpm.requires]
alacritty = "*"
fuzzel = "*"

[package.metadata.deb]
depends = "alacritty, fuzzel"
assets = [
    ["target/release/niri", "usr/bin/", "755"],
    ["resources/niri-session", "usr/bin/", "755"],
    ["resources/niri.desktop", "/usr/share/wayland-sessions/", "644"],
    ["resources/niri-portals.conf", "/usr/share/xdg-desktop-portal/", "644"],
    ["resources/niri.service", "/usr/lib/systemd/user/", "644"],
    ["resources/niri-shutdown.target", "/usr/lib/systemd/user/", "644"],
]
